--- a/KAFKA-7548/simple-topic-KAFKA-221.yaml
+++ b/KAFKA-7548/simple-topic-KAFKA-221.yaml
@@ -1,12 +1,12 @@
 apiVersion: kafka.strimzi.io/v1alpha1
 kind: KafkaTopic
 metadata:
-  name: simple-topic
+  name: simple-topic-kafka-221
   namespace: lightbend
   labels:
     strimzi.io/cluster: pipelines-strimzi
 spec:
-  partitions: 3
+  partitions: 10
   replicas: 1
   config:
     retention.ms: 3600000 # 1 hour
