--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,19 +1,14 @@
-akka {
-  loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = "DEBUG"
-  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
-  logger-startup-timeout = 15s
-}
-
 kafkaHost               = "minikube-test-kafka-bootstrap:9092"
-kafkaHost               = ${?SLOW_CONSUMER_KAFKA_HOST}
-topic                   = "replicated.topic"
-topic                   = ${?SLOW_CONSUMER_TOPIC}
-consumerGroup           = "replicated-topic-slow-consumer-cg"
-consumerGroup           = ${?SLOW_CONSUMER_CONSUMERGROUP}
-clientId                = "replicated-topic-slow-consumer-cid"
-clientId                = ${?SLOW_CONSUMER_CLIENTID}
-consumeMessagePerSecond = 10000
-consumeMessagePerSecond = ${?SLOW_CONSUMER_MPS}
-commitGroupSize         = 10
-commitGroupSize         = ${?SLOW_CONSUMER_COMMIT_SIZE}
+kafkaHost               = ${?KAFKA_CONSUMER_TESTS_KAFKA_HOST}
+topic                   = "simple-topic"
+topic                   = ${?KAFKA_CONSUMER_TESTS_TOPIC}
+partitions              = 10
+partitions              = ${?KAFKA_CONSUMER_TESTS_PARTITIONS}
+clientId                = "kafka-consumer-tests"
+clientId                = ${?KAFKA_CONSUMER_CLIENT_ID}
+consumerGroup           = "simple-topic-consumer-tests-cg"
+consumerGroup           = ${?KAFKA_CONSUMER_TESTS_CONSUMERGROUP}
+maxPollRecords          = 500
+maxPollRecords          = ${?KAFKA_CONSUMER_TESTS_MAXPOLLRECORDS}
+pausePartitions         = true
+pausePartitions         = ${?KAFKA_CONSUMER_TESTS_PAUSE_PARTITIONS}
