--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -12,3 +12,5 @@ maxPollRecords          = 500
 maxPollRecords          = ${?KAFKA_CONSUMER_TESTS_MAXPOLLRECORDS}
 pausePartitions         = true
 pausePartitions         = ${?KAFKA_CONSUMER_TESTS_PAUSE_PARTITIONS}
+sinDelay                = false
+sinDelay                = ${?KAFKA_CONSUMER_TESTS_SIN_DELAY}
